# rocketboard

./: .gitignore  README.md  conftest.py  design.md  pyproject.toml  run_tests.sh  setup.py
interface/: example_select.ipynb  simple_select_stock.py  test_select.py
price/: __init__.py  async_history_price.py  data_refresh.sh  fetch_basic_info.py  init_duckdb.py  load_to_duckdb.py  test_basic_info.py
scripts/: README.md  update_daily_prices.py  update_daily_prices.sh
shared/lookup/: credentials.py  credentials.txt
shared/stock_assets/: latest_sp500.csv  nasdaqlisted.csv  nasdaqlisted.txt  nyse_tickers.txt
tests/: test_cik.py  test_get_api_key.py  test_parquet_pipeline.py  test_price_filter.py  test_volume_filter.py
utils/lookup/: cik_lookup.py  credentials.py
