[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rocketquant-ai"
version = "0.1.0"
description = "RocketQuant AI - Financial Data Platform for Quantitative Investing"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.8.0",
    "duckdb>=0.8.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "pyarrow>=10.0.0",
    "sec-edgar-downloader>=5.0.0",
    "secedgar>=0.6.0",
    "xlsxwriter>=3.0.0",
    "tqdm>=4.60.0",
    "pytest>=6.2.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "price*", "earnings*"]

[project.optional-dependencies]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=7.0.0",
]

